[gd_scene load_steps=5 format=3 uid="uid://dd0r27pt5rac5"]

[ext_resource type="Script" path="res://Scripts/ground.gd" id="1_mih5o"]
[ext_resource type="Texture2D" uid="uid://cofuiaysknei4" path="res://Assets/base-night.png" id="1_s5p0w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1qkt1"]
size = Vector2(336, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rig1r"]
size = Vector2(334, 20)

[node name="ground2" type="Node2D"]
script = ExtResource("1_mih5o")

[node name="Ground1" type="Area2D" parent="."]

[node name="Sprite1" type="Sprite2D" parent="Ground1"]
modulate = Color(0.32549, 0.32549, 0.32549, 1)
texture = ExtResource("1_s5p0w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground1"]
position = Vector2(0, -46)
shape = SubResource("RectangleShape2D_1qkt1")

[node name="Ground2" type="Area2D" parent="."]

[node name="Sprite2" type="Sprite2D" parent="Ground2"]
modulate = Color(0.32549, 0.32549, 0.32549, 1)
position = Vector2(336, 0)
texture = ExtResource("1_s5p0w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground2"]
position = Vector2(335, -46)
shape = SubResource("RectangleShape2D_rig1r")
